Fixed wrong name

--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -2171,7 +2171,7 @@
         "outputId": "7e7d2744-7e71-4220-dd53-5d70faf188ae"
       },
       "source": [
-        "flexgpt2_model = FlexGPT2FewShot('./flex-model1')"
+        "flaxgpt2_model = FlaxGPT2FewShot('./flex-model1')"
       ],
       "execution_count": 4,
       "outputs": [
@@ -2372,7 +2372,7 @@
         "outputId": "5cf7cc81-997c-4e4f-a5cd-d690ae0497b5"
       },
       "source": [
-        "flexgpt2_model.train(\n",
+        "flaxgpt2_model.train(\n",
         "    data,\n",
         "    logging_dir='./log_model_flex',\n",
         "    num_train_epochs=330,\n",
@@ -5121,7 +5121,7 @@
         "outputId": "18a4296c-bd38-4840-f13d-9ccf94a8c99e"
       },
       "source": [
-        "flexgpt2_model.gen(\"\"\"\n",
+        "flaxgpt2_model.gen(\"\"\"\n",
         "Q: ร้องเพลงให้ฟังหน่อย\\n\n",
         "A:\"\"\",max_length=100)"
       ],
