--- a/notebooks/sentiment_analysis.ipynb
+++ b/notebooks/sentiment_analysis.ipynb
@@ -56,7 +56,7 @@
     "id": "pqqe5llhcmmP"
    },
    "source": [
-    "## FlexGPT2FewShot\n",
+    "## FlaxGPT2FewShot\n",
     "\n",
     "It’s GPT-2 model. It was trained on the OSCAR dataset https://huggingface.co/flax-community/gpt2-base-thai"
    ]
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "flexgpt2_model = FlexGPT2FewShot('./flex-model1')"
+    "flaxgpt2_model = FlaxGPT2FewShot('./flex-model1')"
    ]
   },
   {
@@ -2574,7 +2574,7 @@
     }
    ],
    "source": [
-    "flexgpt2_model.train(\n",
+    "flaxgpt2_model.train(\n",
     "    data,\n",
     "    logging_dir='./log_model_flex_1',\n",
     "    num_train_epochs=300,\n",
@@ -2620,7 +2620,7 @@
     }
    ],
    "source": [
-    "flexgpt2_model.gen('Tweet: \"มีความสุขจังเลย\" Sentiment:',max_length=20)"
+    "flaxgpt2_model.gen('Tweet: \"มีความสุขจังเลย\" Sentiment:',max_length=20)"
    ]
   },
   {
